--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <h1>machBar</h1>
-            <span>Die offene Werkstatt des Wissenschaftlades Potsdam e.V.</span>
+            <span>Die offene Werkstatt des Wissenschaftladens Potsdam e.V.</span>
         </header>    
         <footer><span id="description"> Beschreibung</span> | <a href="https://github.com/Chaostreff-Potsdam/machbar-slideshow">?</a></footer>
     </body>
