--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="slide.js"></script>
+        <script type="text/javascript" src="swipe.js"></script>
     </head>
     <body>
         <header>
             <h1>machBar</h1>
             <span>Die offene Werkstatt des Wissenschaftladens Potsdam e.V.</span>
         </header>    
-        <footer><span id="description"> Beschreibung</span> | <a href="https://github.com/Chaostreff-Potsdam/machbar-slideshow">?</a></footer>
+        <footer><span id="description">Beschreibung</span> | <a href="https://github.com/Chaostreff-Potsdam/machbar-slideshow">?</a></footer>
     </body>
 </html>
+
