--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>machBar</h1>
             <span>Die offene Werkstatt des Wissenschaftladens Potsdam e.V.</span>
         </header>    
-        <footer><span id="description">Beschreibung</span> | <a href="https://github.com/Chaostreff-Potsdam/machbar-slideshow">?</a></footer>
+        <footer><span id="description">Beschreibung</span> | <a href="https://github.com/Chaostreff-Potsdam/machbar-slideshow">!</a></footer>
     </body>
 </html>
 
